Fix error in openAPI definition
